--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "prepare": "make"
     },
     "dependencies": {
+        "@greymass/eosio": "^0.2.5",
+        "asmcrypto.js": "^2.3.2",
+        "scrypt-js": "^3.0.1",
         "tslib": "^2.1.0"
     },
     "devDependencies": {
