--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@greymass/eosio-key-encryption",
-    "description": "DESCRIPTION",
-    "version": "0.0.0",
+    "description": "EOSIO private key en/decryption library",
+    "version": "1.0.0",
     "homepage": "https://github.com/greymass/eosio-key-encryption",
     "license": "BSD-3-Clause",
     "main": "lib/eosio-key-encryption.js",
