--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
         "experimentalDecorators": true,
         "importHelpers": true,
         "isolatedModules": true,
-        "lib": ["esnext"],
-        "module": "esnext",
+        "lib": ["es2020"],
+        "module": "es2020",
         "moduleResolution": "node",
         "noImplicitAny": false,
         "sourceMap": true,
         "strict": true,
-        "target": "esnext"
+        "target": "es2020"
     },
     "include": ["src/**/*"]
 }
