--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "prepare": "make"
     },
     "dependencies": {
-        "@greymass/eosio": "^0.5.0",
+        "@greymass/eosio": "^0.6.0",
+        "@greymass/miniaes": "^1.0.0",
         "asmcrypto.js": "^2.3.2",
         "scrypt-js": "^3.0.1",
         "tslib": "^2.1.0"
@@ -29,10 +30,10 @@
         "@rollup/plugin-typescript": "^8.1.1",
         "@types/mocha": "^9.0.0",
         "@types/node": "^16.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.9.0",
-        "@typescript-eslint/parser": "^4.9.0",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
         "assert": "^2.0.0",
-        "eslint": "^7.19.0",
+        "eslint": "^8.14.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "mocha": "^9.0.2",
